Finished lecture content, still need to add images and interaction

--- a/week_02/reproducibility.html
+++ b/week_02/reproducibility.html
@@ -110,18 +110,19 @@ University of Wisconsin-Madison<br />
 <li>You are already doing this!</li>
 </ul>
 </section>
-<section id="the-very-beginning" class="titleslide slide level1"><h2 class="shout">The very beginning</h2></section><section id="data-collection" class="slide level2">
+<section id="details-from-the-very-beginning" class="titleslide slide level1"><h2 class="shout"><em>Details</em>, from the very beginning</h2></section><section id="data-collection" class="slide level2">
 <h2>Data collection</h2>
 <ul>
 <li>Reproducibility begins before you head to the field or lab<br />
 </li>
 <li>Establish a recorded protocol complete with references<br />
  +Test if everyone can follow the protocol before they are left on their own<br />
- +Bring the protocol with you to the field and record deviations +Name everything that is unique – each chamber Do not assume you will remember anything. Remembering indicates there is a piece of data that exists only in your head!<br />
+ +Bring the protocol with you to the field and record deviations +Name everything that is unique – each chamber, depth, or rep<br />
 </li>
-<li>Take notes on anything that might be slightly relevant, but don’t go overboard – you should have established most of the required information before you got to the field<br />
+<li>Take notes on anything that might be slightly relevant, but don’t go overboard – you should have established most of the required information before you got to the field/lab<br />
 </li>
-<li>Take pictures in the field/lab. . .you gotta</li>
+<li>Take so much pictures/video in the field/lab<br />
+<strong>Do not assume you will remember anything. Remembering indicates there is a piece of data that exists only in your head!</strong></li>
 </ul>
 </section><section id="collected-data" class="slide level2">
 <h2>Collected data</h2>
@@ -159,7 +160,7 @@ University of Wisconsin-Madison<br />
 </section><section id="excel-is-a-date-monster" class="slide level2">
 <h2>Excel is a date monster</h2>
 <center>
-<img src="images/dates_in_excel.png" width="600px" />
+<img src="images/dates_in_excel.png" width="500px" />
 </center>
 <p>Be very, very careful.</p>
 </section><section id="fill-in-all-of-the-cells" class="slide level2">
@@ -237,13 +238,52 @@ More on tidy data later</li>
 <ul>
 <li>This is a non-proprietary format, so anyone can open it at any point in the future</li>
 </ul>
-</section><section id="section" class="slide level2">
-<h2></h2>
 </section><section id="further-resources" class="slide level2">
 <h2>Further resources</h2>
-<p>(<a href="https://github.com/datacarpentry/spreadsheet-ecology-lesson/blob/gh-pages/02-common-mistakes.md#tables" class="uri">https://github.com/datacarpentry/spreadsheet-ecology-lesson/blob/gh-pages/02-common-mistakes.md#tables</a>)</p>
-</section><section id="then-file-naming" class="slide level2">
-<h2>Then file naming</h2>
+<p><a href="https://github.com/jennybc/2016-06_spreadsheets">Jenny Bryan’s Spreadsheet Page</a><br />
+<a href="https://github.com/datacarpentry/spreadsheet-ecology-lesson/blob/gh-pages/02-common-mistakes.md#tables">Data Carpentry Workshop</a><br />
+<a href="http://ropensci.github.io/reproducibility-guide/sections/checklist/">Checklist from rOpenSci</a><br />
+Also very good:<br />
+<a href="https://github.com/jtleek/datasharing">How to share data with a statistician</a></p>
+</section><section id="totally-worth-spending-class-time-on-file-naming" class="slide level2">
+<h2>Totally worth spending class time on file naming</h2>
+<center>
+<img src="images/terrified.gif" width="500px"/>
+</center>
+</section><section id="naming-things" class="slide level2">
+<h2><a href="https://github.com/jennybc/organization-and-naming/blob/master/naming-things/naming-slides.pdf">Naming things</a></h2>
+Jennifer Bryan, Statistics and Micheal Smith Labs<br />
+University of British Columbia <a href="http://www.stat.ubc.ca/~jenny" class="uri">http://www.stat.ubc.ca/~jenny</a><br />
+<span class="citation" data-cites="JennyBryan">@JennyBryan</span><br />
+
+<center>
+<img src="images/bryan.jpg" width="300px" />
+</center>
+</section><section id="file-names-should" class="slide level2">
+<h2>File names should</h2>
+<p>be machine readable<br />
+be human readable<br />
+play well with default ordering</p>
+</section><section id="machine-readable-means" class="slide level2">
+<h2>Machine readable means</h2>
+<p>Regular expression and globbing friendly<br />
+* Avoid spaces, punctuation, accented characters, case sensitivity<br />
+Easy to compute on<br />
+* Deliberate use of delimiters</p>
+</section><section id="globbing" class="slide level2">
+<h2>Globbing</h2>
+<center>
+<img src="images/globbing.png" width="300px" />
+</center>
+</section><section id="human-readable" class="slide level2">
+<h2>Human Readable</h2>
+<p>Name contains info on content<br />
+(include examples of bad names I have)</p>
+</section><section id="plays-wells-with-default-ordering" class="slide level2">
+<h2>Plays wells with default ordering</h2>
+<p>Put something numeric first Use YYYY-MM-DD for dates<br />
+Left pad other numbers with zeros<br />
+* 01 instead of 1</p>
 </section>
 
   <!--
