Fleshing out the slides with examples

--- a/week_02/reproducibility.html
+++ b/week_02/reproducibility.html
@@ -27,8 +27,8 @@
 
     
   
-<section id="todays-goal-never-feel-like-this-again" class="slide level2">
-<h2>Today’s goal: Never feel like this again</h2>
+<section id="when-you-open-a-bad-folder" class="slide level2">
+<h2>When you open a bad folder</h2>
 <center>
 <img src="images/copyofcopy.gif" width="700px"/>
 </center>
@@ -73,15 +73,40 @@ University of Wisconsin-Madison<br />
 </section><section id="organize-your-data-and-code" class="slide level2">
 <h2>Organize your data and code</h2>
 <ul>
-<li>Use one directory for one project</li>
-<li>Put code and data in separate subdirectories</li>
-<li>Use relative paths that refer only to the project directory and not to your specific computer<br />
-</li>
-<li>This way if some one else opens the directory on their computer, the script still works</li>
-<li>Take a minute and choose file names carefully (more later)</li>
-<li>Avoid using <em>final</em> in a file name – nothing is ever final, ever</li>
-<li>Write ReadMe files – something that describes what is what</li>
+<li>Use one directory (local) and one repo (GitHub) for one project</li>
+<li>Put code and data in separate subdirectories<br />
+
+<center>
+<img src="images/folder_organization.png" width="500px" />
+</center></li>
 </ul>
+</section><section id="organize-your-data-and-code-1" class="slide level2">
+<h2>Organize your data and code</h2>
+<center>
+<img src="images/folder_organization_github.png" width="600px" />
+</center>
+</section><section id="organize-your-data-and-code-2" class="slide level2">
+<h2>Organize your data and code</h2>
+<ul>
+<li>Use relative paths that refer only to the project directory and not to your specific computer<br />
+<em>Good:</em> images/friends.gif<br />
+<em>Bad:</em> C:/Users/rdietzel/Documents/materials/week_02/images/friends.gif<br />
+
+<center>
+<img src="images/friends.gif" width="400px" />
+</center>
+This will save your friends a lot of trouble when they run your code on their computer</li>
+</ul>
+</section><section id="organize-your-data-and-code-3" class="slide level2">
+<h2>Organize your data and code</h2>
+Write ReadMe files<br />
+* The ReadMe file is the first to be seen or sought<br />
+* Describe the files in your folder, especially which order to run them in<br />
+* Leave a map for those that come after you, or your future self<br />
+
+<center>
+<img src="images/treasure-map.jpg" width="400px" />
+</center>
 </section><section id="automate-the-process" class="slide level2">
 <h2>Automate the process</h2>
 <ul>
@@ -93,13 +118,13 @@ University of Wisconsin-Madison<br />
 </section><section id="turn-scripts-into-reproducible-reports" class="slide level2">
 <h2>Turn scripts into reproducible reports</h2>
 <ul>
-<li>Include enough text in your scripts that future you and anyone else will know why you did what you did</li>
+<li>Include enough text in your scripts that future you and anyone else will know <strong>why</strong> you did what you did</li>
 <li>We will devote time to reproducible reports later in the semester</li>
 </ul>
-</section><section id="turn-repeated-code-into-functions" class="slide level2">
-<h2>Turn repeated code into functions</h2>
+</section><section id="turn-repeated-code-into-functions---more-later" class="slide level2">
+<h2>Turn repeated code into functions - more later</h2>
 <ul>
-<li>A function is a command made up of other code, e.g. mean</li>
+<li>A function is a command made up of other code, e.g. mean, standard deviation</li>
 <li>Your code will be a lot easier to read and faster to write<br />
 </li>
 <li>Package up these functions to share and use later</li>
@@ -107,7 +132,7 @@ University of Wisconsin-Madison<br />
 </section><section id="use-version-control" class="slide level2">
 <h2>Use version control</h2>
 <ul>
-<li>You are already doing this!</li>
+<li>You are already doing this with GitHub!</li>
 </ul>
 </section>
 <section id="details-from-the-very-beginning" class="titleslide slide level1"><h2 class="shout"><em>Details</em>, from the very beginning</h2></section><section id="data-collection" class="slide level2">
@@ -202,9 +227,17 @@ More on tidy data later</li>
 </ul>
 </section><section id="no-calculations-in-raw-data-files" class="slide level2">
 <h2>No calculations in raw data files</h2>
-<p>*If you just can’t wait, make a copy and make your messes there</p>
+<p>*If you just can’t wait, make a copy and create your messes there</p>
 </section><section id="dont-use-font-color-or-highlighting-as-data" class="slide level2">
 <h2>Don’t use font color or highlighting as data</h2>
+<div class="double">
+<p class="double-flow">
+text here
+</p>
+<p>
+<img src="images/andee_profile.png" class="one-col-image">
+</p>
+</div>
 <ul>
 <li>No one can be sure what you mean<br />
 </li>
