More splitting and providing examples

--- a/week_02/reproducibility.html
+++ b/week_02/reproducibility.html
@@ -112,7 +112,12 @@ Write ReadMe files<br />
 <ul>
 <li>Aim to write a script of your scripts<br />
 </li>
-<li>Rerunning your project happens with the touch of a button</li>
+<li>This also helps you mentally organize the steps you need to take in your project<br />
+</li>
+<li>Rerunning your project happens with the touch of a button<br />
+</li>
+<li>Do months of work over and over and over whenever you need to<br />
+</li>
 <li>Broman recommends GNU Make, but R is sufficient for this course</li>
 </ul>
 </section><section id="turn-scripts-into-reproducible-reports" class="slide level2">
