--- a/week_02/reproducibility/slides.html
+++ b/week_02/reproducibility/slides.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="slides_files/rmdshower/node_modules/shower-ribbon/styles/screen-4x3.css">
-  <link rel="stylesheet" href="slides_files/rmdshower/style-common.css">
-  <link rel="stylesheet" href="slides_files/rmdshower/style-ribbon.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/node_modules/shower-ribbon/styles/screen-4x3.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/style-common.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/style-ribbon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"></script>
-  <script src="slides_files/rmdshower/auto-render.min.js" type="text/javascript"></script>
+  <script src="slides_files\rmdshower/auto-render.min.js" type="text/javascript"></script>
   
   
   
@@ -54,6 +54,10 @@ If you can’t reproduce what you did, it is not credible</p>
 </ul>
 </section><section id="the-best-thing-you-can-do-is-to-start-every-project-with-the-goal-and-mindset-of-reproducibility." class="slide level2">
 <h2>The best thing you can do is to start every project with the goal and mindset of reproducibility.</h2>
+<center>
+<img src="images/light.jpg" width="500px" />
+</center>
+<p><strong>Stop working in the dark. Realize that everything you do will eventually be seen.</strong></p>
 </section><section id="steps-to-reproducible-research" class="slide level2">
 <h2>Steps to reproducible research</h2>
 Karl Broman, Department of Biostatistics &amp; Medical Informatics<br />
@@ -103,7 +107,7 @@ This will save your friends a lot of trouble when they run your code on their co
 </ul>
 </section><section id="organize-your-data-and-code-3" class="slide level2">
 <h2>Organize your data and code</h2>
-<p>Write ReadMe files</p>
+<p>Write ReadMe files (component of metadata)</p>
 <ul>
 <li>The ReadMe file is the first to be seen or sought<br />
 </li>
@@ -179,18 +183,30 @@ play well with default ordering</p>
 </section><section id="globbing" class="slide level2">
 <h2>Globbing</h2>
 <center>
-<img src="images/globbing.png" width="300px" />
+<img src="images/globbing.png" width="600px" />
 </center>
 </section><section id="human-readable" class="slide level2">
 <h2>Human Readable</h2>
-<p>Name contains info on content<br />
-(include examples of bad names I have)</p>
+Name contains info on content<br />
+
+<center>
+<img src="images/what-are-they.png" width="400px" />
+</center>
 </section><section id="plays-wells-with-default-ordering" class="slide level2">
 <h2>Plays wells with default ordering</h2>
-<p>Put something numeric first Use YYYY-MM-DD for dates<br />
-Left pad other numbers with zeros</p>
+Put something numeric first Use YYYY-MM-DD for dates<br />
+Left pad other numbers with zeros (01 instead of 1)<br />
+
+<center>
+<img src="images/000example.png" width="400px" />
+</center>
+<p>Not cool to manipulate default ordering with ill intentions</p>
+</section><section id="plan-your-naming-scheme" class="slide level2">
+<h2>Plan your naming scheme</h2>
 <ul>
-<li>01 instead of 1</li>
+<li>Picture what your files, folders, project, and degree program will look like<br />
+</li>
+<li>Name your file when you create it, not just before you need to run out of your office</li>
 </ul>
 </section>
 
@@ -199,7 +215,7 @@ Left pad other numbers with zeros</p>
   just remove “progress” element.
   -->
   <!-- <div class="progress"></div> -->
-  <script src="slides_files/rmdshower/node_modules/shower/node_modules/shower-core/shower.min.js"></script>
+  <script src="slides_files\rmdshower/node_modules/shower/node_modules/shower-core/shower.min.js"></script>
   <!-- Copyright © 2015 Yours Truly, Famous Inc. -->
   <!-- Photos by John Carey, fiftyfootshadows.net -->
 
