Added link for if we have time

--- a/week_02/reproducibility/slides.html
+++ b/week_02/reproducibility/slides.html
@@ -85,7 +85,7 @@ University of Wisconsin-Madison<br />
 <li>Put code and data in separate subdirectories<br />
 
 <center>
-<img src="images/folder_organization.png" width="500px" />
+<img src="images/folder_organization.png" width="650px" />
 </center></li>
 </ul>
 </section><section id="organize-your-data-and-code-1" class="slide level2">
@@ -209,6 +209,7 @@ Left pad other numbers with zeros (01 instead of 1)<br />
 <li>Name your file when you create it, not just before you need to run out of your office</li>
 </ul>
 </section>
+<section id="data-management-and-sharing-snafu-in-three-short-acts" class="titleslide slide level1"><h2 class="shout"><a href="https://www.youtube.com/watch?v=N2zK3sAtr-4">Data Management and Sharing Snafu in Three Short Acts</a></h2></section></section>
 
   <!--
   To hide progress bar from entire presentation
