--- a/week_02/data-collection-and-spreadsheets/slides.html
+++ b/week_02/data-collection-and-spreadsheets/slides.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spreadsheets</title>
+  <title>Before Data gets to R</title>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="slides_files/rmdshower/node_modules/shower-ribbon/styles/screen-4x3.css">
-  <link rel="stylesheet" href="slides_files/rmdshower/style-common.css">
-  <link rel="stylesheet" href="slides_files/rmdshower/style-ribbon.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/node_modules/shower-ribbon/styles/screen-4x3.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/style-common.css">
+  <link rel="stylesheet" href="slides_files\rmdshower/style-ribbon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"></script>
-  <script src="slides_files/rmdshower/auto-render.min.js" type="text/javascript"></script>
+  <script src="slides_files\rmdshower/auto-render.min.js" type="text/javascript"></script>
   
   
   
@@ -21,20 +21,39 @@
 <body class="shower list">
 
   <header class="caption">
-    <h1>Spreadsheets</h1>
+    <h1>Before Data gets to R</h1>
     <p>Ranae Dietzel &amp; Andee Kaplan</p>
   </header>
 
     
   
-<section id="details-from-the-very-beginning" class="titleslide slide level1"><h2 class="shout"><em>Details</em>, from the very beginning</h2></section><section id="data-collection" class="slide level2">
-<h2>Data collection</h2>
+<section id="the-very-beginning" class="titleslide slide level1"><h2 class="shout">The very beginning</h2></section><section id="experimental-design" class="slide level2">
+<h2>Experimental design</h2>
 <ul>
-<li>Reproducibility begins before you head to the field or lab<br />
+<li>Reproducibility and collaboration begin before you head to the field or lab<br />
 </li>
+<li>If you are going to work with a statistician (and you should), talk with them when you are designing your project<br />
+</li>
+<li>Search for data related to your field site to determine expected variability and potential problems<br />
+</li>
+<li>Set up a GitHub repo and introduce the crazy idea of version control to your collaborators<br />
+
+<center>
+<img src="images/crazy-idea.gif" width="300px"/>
+</center></li>
+</ul>
+</section><section id="experimental-design-1" class="slide level2">
+<h2>Experimental design</h2>
+Ask for advice and then actually listen to what people say
+<center>
+<img src="images/experimental-design.png" width="700px"/>
+</center>
+</section><section id="before-you-head-to-the-field" class="slide level2">
+<h2>Before you head to the field</h2>
+<ul>
 <li>Establish a recorded protocol complete with references<br />
-+Test if everyone can follow the protocol before they are left on their own<br />
-+Bring the protocol with you to the field and record deviations +Name everything that is unique – each chamber, depth, or rep<br />
+ +Test if everyone can follow the protocol before they are left on their own<br />
+ +Bring the protocol with you to the field and record deviations +Name everything that is unique – each chamber, depth, or rep<br />
 </li>
 <li>Take notes on anything that might be slightly relevant, but don’t go overboard – you should have established most of the required information before you got to the field/lab<br />
 </li>
@@ -177,7 +196,7 @@ Also very good:<br />
   just remove “progress” element.
   -->
   <!-- <div class="progress"></div> -->
-  <script src="slides_files/rmdshower/node_modules/shower/node_modules/shower-core/shower.min.js"></script>
+  <script src="slides_files\rmdshower/node_modules/shower/node_modules/shower-core/shower.min.js"></script>
   <!-- Copyright © 2015 Yours Truly, Famous Inc. -->
   <!-- Photos by John Carey, fiftyfootshadows.net -->
 
