--- a/week_02/data-collection-and-spreadsheets/slides.html
+++ b/week_02/data-collection-and-spreadsheets/slides.html
@@ -44,22 +44,29 @@
 </ul>
 </section><section id="experimental-design-1" class="slide level2">
 <h2>Experimental design</h2>
-Ask for advice and then actually listen to what people say
+Ask for advice and then actually consider what people say
 <center>
-<img src="images/experimental-design.png" width="700px"/>
+<img src="images/experimental-design2.jpg" width="600px"/>
 </center>
 </section><section id="before-you-head-to-the-field" class="slide level2">
 <h2>Before you head to the field</h2>
 <ul>
 <li>Establish a recorded protocol complete with references<br />
- +Test if everyone can follow the protocol before they are left on their own<br />
- +Bring the protocol with you to the field and record deviations +Name everything that is unique – each chamber, depth, or rep<br />
 </li>
+<li>Test if everyone can follow the protocol before they are left on their own<br />
+</li>
+<li>Bring the protocol with you to the field and record deviations<br />
+</li>
+<li>Name everything that is unique – each chamber, depth, or rep</li>
+</ul>
+</section><section id="before-you-head-to-the-field-1" class="slide level2">
+<h2>Before you head to the field</h2>
+<ul>
 <li>Take notes on anything that might be slightly relevant, but don’t go overboard – you should have established most of the required information before you got to the field/lab<br />
 </li>
-<li>Take so much pictures/video in the field/lab<br />
-<strong>Do not assume you will remember anything. Remembering indicates there is a piece of data that exists only in your head!</strong></li>
+<li>Take pictures/video in the field/lab until your coworkers reach the point of total annoyance</li>
 </ul>
+<p><strong>Do not assume you will remember anything. Remembering indicates there is a piece of data that exists only in your head!</strong></p>
 </section><section id="collected-data" class="slide level2">
 <h2>Collected data</h2>
 <ul>
