knit changes from this afternoon

--- a/week_02/data-collection-and-spreadsheets/slides.html
+++ b/week_02/data-collection-and-spreadsheets/slides.html
@@ -76,9 +76,9 @@ Ask for advice and then actually consider what people say
 </li>
 <li>Make data entry as easy as possible for those entering data<br />
 </li>
-<li>If data collection was automated, keep it just as it comes in<br />
-<strong>Never manually change your raw data</strong></li>
+<li>If data collection was automated, keep it just as it comes in</li>
 </ul>
+<p><strong>Never manually change your raw data</strong></p>
 </section><section id="once-you-have-the-data-organize-it-according-to-karl-bromans-spreadsheet-data-organization" class="slide level2">
 <h2>Once you have the data, organize it according to Karl Broman’s <a href="http://kbroman.org/dataorg/">spreadsheet data organization</a></h2>
 </section><section id="be-consistent" class="slide level2">
@@ -189,6 +189,8 @@ text here
 <ul>
 <li>This is a non-proprietary format, so anyone can open it at any point in the future</li>
 </ul>
+</section><section id="spreadsheet-cautionary-tales" class="slide level2">
+<h2>Spreadsheet cautionary tales</h2>
 </section><section id="further-resources" class="slide level2">
 <h2>Further resources</h2>
 <p><a href="https://github.com/jennybc/2016-06_spreadsheets">Jenny Bryan’s Spreadsheet Page</a><br />
