--- a/week_02/data-collection-and-spreadsheets/slides.html
+++ b/week_02/data-collection-and-spreadsheets/slides.html
@@ -100,6 +100,7 @@ Ask for advice and then actually consider what people say
 <center>
 <img src="images/iso_8601.png" width="400px" />
 </center>
+<p>xckd.com</p>
 </section><section id="excel-is-a-date-monster" class="slide level2">
 <h2>Excel is a date monster</h2>
 <center>
@@ -113,6 +114,15 @@ Ask for advice and then actually consider what people say
 </li>
 <li>Don’t depend on one cell to cover the information for several cells, you may understand, but a computer won’t</li>
 </ul>
+</section><section id="section" class="slide level2">
+<h2></h2>
+<center>
+<img src="images/bdoc.png" width="1000px" />
+</center>
+<h4 id="section-1"></h4>
+<center>
+<img src="images/rich.png" width="1000px" />
+</center>
 </section><section id="put-just-one-thing-in-a-cell" class="slide level2">
 <h2>Put just one thing in a cell</h2>
 <ul>
@@ -120,6 +130,16 @@ Ask for advice and then actually consider what people say
 </li>
 <li>For example, don’t combine block “A” and plot “23” as “A23”, or you will need to separate that information later</li>
 </ul>
+</section><section id="section-2" class="slide level2">
+<h2></h2>
+<center>
+<img src="images/bdoc.png" width="1200px" />
+</center>
+</section><section id="put-just-one-thing-in-a-cell-1" class="slide level2">
+<h2>Put just one thing in a cell</h2>
+<center>
+<img src="images/dates_in_excel.png" width="500px" />
+</center>
 </section><section id="make-it-a-rectangle" class="slide level2">
 <h2>Make it a rectangle</h2>
 <ul>
@@ -130,6 +150,16 @@ Ask for advice and then actually consider what people say
 <li>If you treat your spreadsheet like a virtual desk with data and calculations and graphs spread all over the place, even other humans are going to have a tough time<br />
 More on tidy data later</li>
 </ul>
+</section><section id="section-3" class="slide level2">
+<h2></h2>
+<center>
+<img src="images/texture.png" width="900px" />
+</center>
+</section><section id="section-4" class="slide level2">
+<h2></h2>
+<center>
+<img src="images/texture2.png" width="900px" />
+</center>
 </section><section id="create-a-data-dictionary" class="slide level2">
 <h2>Create a data dictionary</h2>
 <ul>
@@ -143,19 +173,19 @@ More on tidy data later</li>
 </li>
 <li>Measurement units</li>
 </ul>
+</section><section id="create-a-data-dictionary-1" class="slide level2">
+<h2>Create a data dictionary</h2>
 </section><section id="no-calculations-in-raw-data-files" class="slide level2">
 <h2>No calculations in raw data files</h2>
-<p>*If you just can’t wait, make a copy and create your messes there</p>
+<ul>
+<li>If you just can’t wait, make a copy and create your messes there<br />
+</li>
+<li>For me, this is called a relapse, but 5 years Excel-spree-free</li>
+</ul>
 </section><section id="dont-use-font-color-or-highlighting-as-data" class="slide level2">
 <h2>Don’t use font color or highlighting as data</h2>
 <div class="double">
 <p class="double-flow">
-text here
-</p>
-<p>
-<img src="images/andee_profile.png" class="one-col-image">
-</p>
-</div>
 <ul>
 <li>No one can be sure what you mean<br />
 </li>
@@ -163,6 +193,11 @@ text here
 </li>
 <li><em>Words</em> provide more information, so include notes in a different column</li>
 </ul>
+</p>
+<p>
+<img src="images/colors.png" class="one-col-image">
+</p>
+</div>
 </section><section id="choose-good-names-for-things" class="slide level2">
 <h2>Choose good names for things</h2>
 <ul>
@@ -172,7 +207,12 @@ text here
 </li>
 <li>Avoid special characters($, @, %, #, &amp;, *, (, ), !, etc.)<br />
 </li>
-<li><strong>Short, but meaningful</strong></li>
+<li><strong>Short, but meaningful</strong><br />
+##<br />
+
+<center>
+<img src="images/summary.png" width="900px" />
+</center></li>
 </ul>
 </section><section id="make-backups" class="slide level2">
 <h2>Make backups</h2>
