Stacking up some slides

--- a/week_06/slides.html
+++ b/week_06/slides.html
@@ -33,36 +33,55 @@
 <img src="images/Rlogo.png" width="500px"/>
 </center>
 </section>
-<section id="what-is-r" class="titleslide slide level1"><h2 class="shout">What is R?</h2></section><section id="r-is-an-environment." class="slide level2">
-<h2><strong>R is an environment.</strong></h2>
-<p><img src="images/environment4.jpg" class="cover height" style="filter:FlipH" /></p>
+<section id="what-is-r" class="titleslide slide level1"><h2 class="shout">What is R?</h2></section></section>
+<section id="r-is-an-environment." class="titleslide slide level1"><h2 class="shout">R is an environment.</h2></section><section id="r-is-an-integrated-suite-of-software-facilities-for-data-manipulation-calculation-and-graphical-display." class="slide level2">
+<h2>R is an integrated suite of software facilities for data manipulation, calculation and graphical display.</h2>
+<ul>
+<li class="fragment next">From the <a href="https://www.r-project.org/about">R homepage</a></li>
+</ul>
+</section><section id="r-is" class="slide level2">
+<h2>R is</h2>
+<ul>
+<li class="fragment next">an effective data handling and storage facility<br />
+</li>
+<li class="fragment next">a suite of operators for calculations on arrays, in particular matrices<br />
+</li>
+<li class="fragment next">a large, coherent, integrated collection of intermediate tools for data analysis<br />
+</li>
+<li class="fragment next">graphical facilities for data analysis and display either on-screen or on hardcopy and<br />
+</li>
+<li class="fragment next">a well-developed, simple and effective programming language which includes conditionals, loops, user-defined recursive functions and input and output facilities.</li>
+</ul>
+</section><section id="the-term-environment-is-intended-to-characterize-it-as-a-fully-planned-and-coherent-system-rather-than-an-incremental-accretion-of-very-specific-and-inflexible-tools-as-is-frequently-the-case-with-other-data-analysis-software." class="slide level2">
+<h2>The term “environment” is intended to characterize it as a fully planned and coherent system, rather than an incremental accretion of very specific and inflexible tools, as is frequently the case with other data analysis software.</h2>
+</section><section id="so-many-ways-to-learn-r" class="slide level2">
+<h2>So many ways to learn R</h2>
+<ul>
+<li class="fragment next"><a href="https://cran.r-project.org/doc/manuals/R-intro.pdf">The manual</a><br />
+</li>
+<li class="fragment next">Books – My favorite is <a href="https://archive.org/details/Norman_Matloff___The_Art_of_R_Programming">The Art of R Programming</a> by Norman Matloff<br />
+</li>
+<li class="fragment next">Online courses/tutorials – Any recommendations?<br />
+</li>
+<li class="fragment next">Learn R in R with the <a href="http://swirlstats.com/">swiRl</a> package<br />
+</li>
+<li class="fragment next"><strong>In this course!</strong></li>
+</ul>
 </section><section id="section" class="slide level2">
 <h2></h2>
-<ul>
-<li>R is an integrated suite of software facilities for data manipulation, calculation and graphical display.</li>
-</ul>
-</section><section id="section-1" class="slide level2">
-<h2></h2>
-<ul>
-<li>an effective data handling and storage facility<br />
-</li>
-<li>a suite of operators for calculations on arrays, in particular matrices<br />
-</li>
-<li>a large, coherent, integrated collection of intermediate tools for data analysis<br />
-</li>
-<li>graphical facilities for data analysis and display either on-screen or on hardcopy and<br />
-</li>
-<li>a well-developed, simple and effective programming language which includes conditionals, loops, user-defined recursive functions and input and output facilities.</li>
-</ul>
-<p>The term “environment” is intended to characterize it as a fully planned and coherent system, rather than an incremental accretion of very specific and inflexible tools, as is frequently the case with other data analysis software.</p>
-</section><section id="base-r-httpscran.r-project.orgdocmanualsr-intro.pdf" class="slide level2">
-<h2>Base R <a href="https://cran.r-project.org/doc/manuals/R-intro.pdf" class="uri">https://cran.r-project.org/doc/manuals/R-intro.pdf</a></h2>
-<p>what is there common datasets</p>
+<center>
+<img src="images/taketime.jpg" width="400px"/>
+</center>
 </section>
-<section id="community-built" class="titleslide slide level1"><h2 class="shout">Community built</h2></section><h4 id="section-2"></h4>
-<p>Spencer Graves: ‘The sun never sets on the (former) British Empire.’ Today, it never sets on R-Help.</p></section>
-<section id="why-use-r" class="titleslide slide level1"><h2 class="shout">Why use R?</h2></section></section>
-<section id="what-can-r-do" class="titleslide slide level1"><h2 class="shout">What can R do?</h2></section></section>
+<section id="base-r" class="titleslide slide level1"><h2 class="shout">Base R</h2></section><section id="beyond-base" class="slide level2">
+<h2>Beyond base</h2>
+<p>You seem to be falling prey to a common misconception that “R” is some monolithic tool, when in fact it is a herd of cats. – Jeff Newmiller (in response to a user who did not look for packages) R-help (December 2013)</p>
+<ul>
+<li class="fragment next">R has packages</li>
+</ul>
+<h4 id="section-1"></h4>
+<p>Spencer Graves: ‘The sun never sets on the (former) British Empire.’ Today, it never sets on R-Help.</p>
+</section>
 
   <!--
   To hide progress bar from entire presentation
