Probably need more slides

--- a/week_06/slides.html
+++ b/week_06/slides.html
@@ -37,7 +37,7 @@
 <section id="r-is-an-environment." class="titleslide slide level1"><h2 class="shout">R is an environment.</h2></section><section id="r-is-an-integrated-suite-of-software-facilities-for-data-manipulation-calculation-and-graphical-display." class="slide level2">
 <h2>R is an integrated suite of software facilities for data manipulation, calculation and graphical display.</h2>
 <ul>
-<li class="fragment next">From the <a href="https://www.r-project.org/about">R homepage</a></li>
+<li class="fragment next">From the <a href="https://www.r-project.org/about">R homepage</a>:</li>
 </ul>
 </section><section id="r-is" class="slide level2">
 <h2>R is</h2>
@@ -77,10 +77,85 @@
 <h2>Beyond base</h2>
 <p>You seem to be falling prey to a common misconception that “R” is some monolithic tool, when in fact it is a herd of cats. – Jeff Newmiller (in response to a user who did not look for packages) R-help (December 2013)</p>
 <ul>
-<li class="fragment next">R has packages</li>
+<li class="fragment next">R has packages that are easy to install and call upon</li>
 </ul>
-<h4 id="section-1"></h4>
-<p>Spencer Graves: ‘The sun never sets on the (former) British Empire.’ Today, it never sets on R-Help.</p>
+</section><section id="anyone-is-allowed-to-make-an-r-package" class="slide level2">
+<h2>Anyone is allowed to make an R package</h2>
+<ul>
+<li class="fragment next">There are 7,801 R packages available on CRAN (Comprehensive R Archive Network)<br />
+</li>
+<li class="fragment next">Whatever you are doing, some one has probably made an R package that can help you<br />
+</li>
+<li class="fragment next">Packages from CRAN are very well-documented, although sometimes it is tough to get through the jargon<br />
+</li>
+<li class="fragment next">It is often useful to use two forms of documentation</li>
+</ul>
+</section><section id="some-examples" class="slide level2">
+<h2>Some examples</h2>
+<ul>
+<li class="fragment next"><a href="https://cran.r-project.org/web/packages/nlme/nlme.pdf">nlme</a> (more stats)</li>
+<li class="fragment next"><a href="https://cran.r-project.org/web/packages/agricolae/agricolae.pdf">agricolae</a> (stats for agronomy)<br />
+</li>
+<li class="fragment next"><a href="https://cran.r-project.org/web/packages/SoilR/SoilR.pdf">soilR</a> (soil carbon modeling)<br />
+</li>
+<li class="fragment next"><a href="https://cran.r-project.org/web/packages/meteo/meteo.pdf">meteo</a> (spatial modeling)<br />
+</li>
+<li class="fragment next"><a href="https://cran.r-project.org/web/packages/apsimr/index.html">apsimR</a> (run another program from R)<br />
+</li>
+<li class="fragment next"><a href="https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html">tidyr</a> Many packages are not on CRAN – e.g. <a href="http://cbcb.umd.edu/software/metagenomeSeq">metagenomeSeq</a></li>
+</ul>
+</section><section id="whenever-you-think-something-cant-be-done-in-r-a-new-package-seems-to-come-out." class="slide level2">
+<h2>Whenever you think something can’t be done in R, a new package seems to come out.</h2>
+<center>
+<img src="images/cant-do.gif" width="450px"/>
+</center>
+<p>R can probaby do anything, but it doesn’t mean it’s always the best (or fastest) at everything.</p>
+</section>
+<section id="how-are-we-expected-to-keep-up-with-all-these-packages" class="titleslide slide level1"><h2 class="shout">How are we expected to keep up with all these packages?</h2></section><section id="follow-the-r-community" class="slide level2">
+<h2>Follow the R community</h2>
+<ul>
+<li class="fragment next"><a href="https://twitter.com/search?q=%23rstats&amp;src=typd">Twitter</a>, even if you join for this reason #rstats<br />
+</li>
+<li class="fragment next"><a href="https://rweekly.org/">R weekly</a><br />
+</li>
+<li class="fragment next"><a href="https://www.r-bloggers.com/">R Bloggers</a><br />
+</li>
+<li class="fragment next">UseR Conference if you really get into it</li>
+</ul>
+</section><section id="find-r-users-in-your-own-discipline-at-your-own-conferences" class="slide level2">
+<h2>Find R users in your own discipline, at your own conferences</h2>
+<ul>
+<li class="fragment next">Sometimes there are R meetings before the conference begins<br />
+</li>
+<li class="fragment next">Keep an eye out for figures made in ggplot2, read poster methods sections</li>
+</ul>
+</section><section id="search-and-ask-a-lot-of-questions" class="slide level2">
+<h2>Search and ask a lot of questions</h2>
+<ul>
+<li class="fragment next">Google<br />
+</li>
+<li class="fragment next"><a href="http://stackoverflow.com/">Stackoverflow</a><br />
+</li>
+<li class="fragment next"><a href="http://r.789695.n4.nabble.com/">R-Help</a> is also out there, but I don’t use it<br />
+</li>
+<li class="fragment next">Talk to people face-to-face, more than just one person<br />
+</li>
+<li class="fragment next">Join/start an R group</li>
+</ul>
+</section>
+<section id="before-you-know-it-you-will-be-the-r-community" class="titleslide slide level1"><h2 class="shout">Before you know it, you will <em>be</em> the R community</h2></section><section id="the-remainder-of-the-semester-will-be-learning-how-to-do-things-in-r" class="slide level2">
+<h2>The remainder of the semester will be learning how to do things in R</h2>
+<ul>
+<li class="fragment next">Basics<br />
+</li>
+<li class="fragment next">Data wrangling<br />
+</li>
+<li class="fragment next">Data visualization<br />
+</li>
+<li class="fragment next">Scraping data from the web<br />
+</li>
+<li class="fragment next">Let us know of specific needs/interests</li>
+</ul>
 </section>
 
   <!--
