--- a/week_06/slides.html
+++ b/week_06/slides.html
@@ -75,7 +75,8 @@
 </section>
 <section id="base-r" class="titleslide slide level1"><h2 class="shout">Base R</h2></section><section id="beyond-base" class="slide level2">
 <h2>Beyond base</h2>
-<p>You seem to be falling prey to a common misconception that “R” is some monolithic tool, when in fact it is a herd of cats. – Jeff Newmiller (in response to a user who did not look for packages) R-help (December 2013)</p>
+<p>You seem to be falling prey to a common misconception that “R” is some monolithic tool, when in fact it is a herd of cats.<br />
+ – Jeff Newmiller (in response to a user who did not look for packages) R-help (December 2013)</p>
 <ul>
 <li class="fragment next">R has packages that are easy to install and call upon</li>
 </ul>
@@ -102,7 +103,10 @@
 </li>
 <li class="fragment next"><a href="https://cran.r-project.org/web/packages/apsimr/index.html">apsimR</a> (run another program from R)<br />
 </li>
-<li class="fragment next"><a href="https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html">tidyr</a> Many packages are not on CRAN – e.g. <a href="http://cbcb.umd.edu/software/metagenomeSeq">metagenomeSeq</a></li>
+<li class="fragment next"><a href="https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html">tidyr</a><br />
+</li>
+<li class="fragment next"><a href="https://cran.r-project.org/web/packages/knitr/index.html">knitr</a><br />
+ Many packages are not on CRAN – e.g. <a href="http://cbcb.umd.edu/software/metagenomeSeq">metagenomeSeq</a></li>
 </ul>
 </section><section id="whenever-you-think-something-cant-be-done-in-r-a-new-package-seems-to-come-out." class="slide level2">
 <h2>Whenever you think something can’t be done in R, a new package seems to come out.</h2>
